--- a/app/src/main/res/layout/item_weather_default.xml
+++ b/app/src/main/res/layout/item_weather_default.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
-    android:background="@drawable/list_weather_border">
+    android:layout_height="90dp">
 
     <TextView
         android:id="@+id/tv_local"
