--- a/app/src/main/res/layout/item_weather_header.xml
+++ b/app/src/main/res/layout/item_weather_header.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="45dp"
-    android:padding="2dp"
-    android:background="@drawable/list_header_border">
+    android:layout_marginTop="1dp"
+    android:layout_marginStart="1dp"
+    android:layout_marginEnd="1dp">
 
     <TextView
         android:id="@+id/tv_header_local"
-        android:layout_width="46dp"
+        android:layout_width="45dp"
         android:layout_height="match_parent"
         android:gravity="center"
         android:padding="5dp"
